Add scm configuration

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+    <scm>
+        <connection>scm:git:git@github.com:pietrangelo/entando-archetypes.git</connection>
+        <developerConnection>scm:git:git@github.com:pietrangelo/entando-archetypes.git</developerConnection>
+        <url>https://github.com/pietrangelo/entando-archetypes</url>
+        <tag>v5.0.1</tag>
+    </scm>
     <developers>
         <developer>
             <id>e.santoboni</id>
