--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.entando.entando</groupId>
     <artifactId>entando-archetypes</artifactId>
-    <version>5.0.2</version>
+    <version>5.0.3-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Entando: Archetypes</name>
     <description>Archetypes for Entando</description>
@@ -19,7 +19,7 @@
         <connection>scm:git:git@github.com:pietrangelo/entando-archetypes.git</connection>
         <developerConnection>scm:git:git@github.com:pietrangelo/entando-archetypes.git</developerConnection>
         <url>https://github.com/pietrangelo/entando-archetypes</url>
-        <tag>entando-archetypes-5.0.2</tag>
+        <tag>v5.0.1</tag>
     </scm>
     <developers>
         <developer>
